--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -57,12 +57,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">
 
+<!-- google charts -->
+<link rel="import" href="../bower_components/google-chart/google-chart.html">
+
+
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
+<link rel="import" href="../styles/custom-styles.html">
 <link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
-<link rel="import" href="dialog/wall-dialog.html">
+<link rel="import" href="my-list/wall-scopelist.html">
+<link rel="import" href="dialog/wall-addscope.html">
+<link rel="import" href="dialog/wall-addbug.html">
 
+<script src="../bower_components/uuid-js/lib/uuid.js"></script>
+<!--<script src="../scripts/helpers.js"></script>-->
 <!-- Configure your routes here -->
 <!--<link rel="import" href="routing.html">-->
 
