--- a/app/test/my-list-basic.html
+++ b/app/test/my-list-basic.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../../bower_components/test-fixture/test-fixture.html">
 
   <!-- Step 1: import the element to test -->
-  <link rel="import" href="../elements/my-list/my-list.html">
+  <link rel="import" href="../elements/my-list/wall-scopelist.html">
 
 </head>
 <body>
@@ -42,9 +42,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       test('Item lengths should be equalled', function(done) {
         // Test a property
-        // TODO: Fix list.items.push('Foo') causing a WeakMap exception
+        // TODO: Fix list.scopes.push('Foo') causing a WeakMap exception
         // Invalid value used as weak map key
-        list.items = [
+        list.scopes = [
             'Responsive Web App boilerplate',
             'Iron Elements and Paper Elements',
             'End-to-end Build Tooling (including Vulcanize)',
@@ -57,7 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // so wait to check for updates
         flush(function() {
           listItems = list.querySelectorAll('li');
-          assert.equal(list.items.length, listItems.length);
+          assert.equal(list.scopes.length, listItems.length);
           done();
         });
       })
