sends out messages on config and update changes

--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="middle title">WALLCOLOGY ADMIN<div>{{className}}</div></div>
 
 
-        <div class="line"><paper-toggle-button id="toggle-wallscope" on-change="toggleWallscopes"></paper-toggle-button><span></span></div>
+        <div class="line"><paper-toggle-button on-change="toggleWallscopes"></paper-toggle-button><span></span></div>
         <wall-addscope></wall-addscope>
       </paper-toolbar>
 
